c/src/test/resources/c/mini_bnc/valid/ex7Simp.ctrl
<controlFile>
  <sourceFile name="ex7Simp.c" id="1" />
  <run>
    <startPosition fileId="1" line="2" />
    <endPosition fileId="1" line="14" />
  </run>
</controlFile>