c/src/test/resources/c/mini_bnc/invalid/union.ctrl
<controlFile>
  <sourceFile name="union.c" id="1" />
  <run>
    <startPosition fileId="1" line="7" />
    <endPosition fileId="1" line="14" />
  </run>
</controlFile>